--- a/1.html
+++ b/1.html
@@ -1,1 +1,55 @@
-초, 중, 고등학교를 무사히 잘 다녀옴
+<h1>계정관리</h1>
+<h2>이 아이디어는 실현되기가 어렵지만, 나의 아이디어 중에서는 제일 좋다고 생각하고, 꼭 사람들에게 필요하다고 생각해. </h2>
+<h3>열심히 공부해서 이 아이디어를 실현시킬 능력이 되면, 꼭 만들게</h3>
+
+<P>IDEA : 계정관리</P>
+너가 자주 사용하는 이메일함을 들어가면, 너가 가입한 많은 홈페이지 메일이 너를 기다리고 있을거야. 그 중에서 눈에 띄지만 클릭 하기 싫은 메일이 뭔지
+내가 직접 말해볼게
+<ul>
+    <li>비밀번호를 변경하시오</li>
+    <li>가입된 홈페이지의 계정 보안 절차가 변경되었습니다.</li>
+    <li>조지영 고객님, 1년 이상 홈페이지를 사용하지 않아 휴먼 상태로 처리되었습니다.</li>
+    <li>조지영 고객님, 3년 이상 홈페이지를 사용하지 않아 계정 삭제 처리됩니다.</li>
+</ul>
+<br>
+다 한번쯤은 메일함에서 꼭 봤을거야.
+<br>
+그런데 이걸 어떻게 다 처리할까?
+<br>
+솔직히 나는 힘들어
+<br>
+나는 옷에 관심이 많아서 아마 쇼핑몰 가입된 내 계정만 해도 20개는 넘을거야.
+<br>
+하지만, 최애쇼핑몰과 오프라인매장만 이용하기 때문에 사용하지 않는 계정은 10개는 되겠지
+<br>
+사용하지 않는 계정 아이디와 비밀번호는 생각나지도 않아.
+<br>
+찾는다해도 휴먼계정 처리되어서 본인인증을 또 한번 거쳐야되는 매우 귀찮은 일이 생겨나지.
+
+<p>그래서 내가 생각한 아이디어가 바로 계정관리 앱이야</p>
+이때까지 내가 가입한 계정을 한번에 볼 수 있는 앱이지
+현재 사용하고 있는 계정부터 휴면 계정처리된 계정까지 모든 계정을 볼 수 있어.
+단, 이미 삭제된 계정은 찾을 수가 없어.
+<br>
+
+<h4>어떻게 실행이 되는지 알려줄게</h4>
+<ol>
+    <li>본인인증을 한다.</li>
+    <li>모든 계정이 가입시기에 맞춰 순서대로 나온다.</li>
+    <li>현재 사용계정인지 휴먼계정인지 각 계정 오른쪽에 기입되어져 있다.</li>
+    <li>사용하지 않는 계정을 처리하고 싶을 때는 맨 오른쪽에 계정 삭제 버튼을 누르기만 하면 된다.</li>
+    <li>단, 계정 삭제나 휴먼 계정 버튼을 누를 경우, 자신이 사용하는 스마트폰으로 인증번호가 간다.</li>
+    <li>그 인증번호를 찾아서 입력하면 승인 완료</li>
+    <li>그 홈페이지 담당자가 마무리 승인 완료하면 완료 처리가 된다.</li>
+</ol>
+
+
+<h5>이 아이디어의 <strong><u>기대효과</u></strong>를 얘기해보자면</h5>
+<ol>
+    <li>내가 가입했는지도 모르는 계정까지 찾을 수 있다.</li>
+    <li>빠르고 손쉽게 계정을 관리할 수 있다.</li>
+    <li>본인인증을 통해서 찾은 계정이기 때문에 따로 각 홈페이지에서 해야할 본인인증 과정을 건너뛸 수 있다.</li>
+</ol>
+<br>
+
+이상으로 첫 번째 아이디어 계정관리 소개를 마칠게
