--- a/3.html
+++ b/3.html
@@ -1,1 +1,9 @@
-내가 이 공부를 해서 얻을 수 있는게 뭘까?
+멋쟁이 사자처럼에 들어오고 나서 제대로 기술을 많이 확실히 익히지는 못했지만,
+<br>
+방학 때 열심히 공부해서
+<br>
+내가 원하는 홈페이지 하나는 1시간 이내로 만들 수 있기를 바란다.
+<br>
+그리고 이번에 복수전공을 컴퓨터공학과 합격했는데,
+<br>
+지원한만큼 멋사 7기로서 열심히 하기를 바래 지영아 제발
