--- a/2.html
+++ b/2.html
@@ -1,1 +1,37 @@
-세상에서 서 있는 내가 너무 부담스럽고 힘들었어
+<h1>빠른 버스</h1>
+<h2>시외버스앱과 고속버스앱을 합친 앱 </h2>
+<h3>왜 빠른 버스일까?</h3>
+
+<P>IDEA : 빠른버스</P>
+시외버스로 갈 수 있는 지역과 고속버스로 갈 수 있는 지역이 지역별로 따로 구성되어 있어
+<br>
+왜 이 앱이 필요하지라는 의문점을 가질 수 있어.
+<br>
+나는 이 앱이 왜 필요하냐면
+<br>
+먼저, 시외버스앱과 고속버스앱으로 통해 나오는 버스 시간대와 네이버로 검색해서 나오는 버스 시간대가 서로 달라
+<br>
+업데이트를 빨리 해놓지 않는다는 말이지
+<br>
+나는 친구들과 여행을 굉장히 많이 다니는 편인데 정말 버스 시간대로 구하는 것만 1시간이 걸려
+<br>
+특히, 강원도나 촌을 걸쳐서 가는 버스 시간을 알고자 할 때는 진짜 힘들고 스트레스 받아
+<br>
+그래서 전남 고흥 갈 때는 결국 시외버스터미널에 전화걸어서 해결했어
+<br>
+물론, 여행을 자주 안가는 사람들한테는 불필요하다고 생각될 수 있어
+<br>
+하지만, 나는 2종류의 스트레스를 받는 사람들에게는 꼭 필요하다고 생각돼
+<ol>
+    <li>여행을 자주 가는 사람</li>
+    <li>40대 이상의 스마트폰을 사용하시는 분</li>
+</ol>
+여행을 자주 가는 사람은 내가 앞에 얘기했으니 생략할게
+<br>
+40대 이상의 사람들은 스마트폰을 통해서 예매를 하고 싶지만,<br>
+제대로 사용할 줄을 몰라서 결국 미리 터미널로 가서 예약을 하고 기다리는 경우가 허다해
+<br>
+그런 분들을 위해서 시외버스앱과 고속버스앱을 통합시켜서 사용할 수 있도록 만들고 싶어<br>
+<u>예매의 편리성과 시각성을 극대화</u>해서 모두가 이용하기 편리하도록 만드는게 이 아이디어의 목표야
+<br>
+이상 내 두 번째 아이디어 빠른 버스 소개를 마칠게
