--- a/index.html
+++ b/index.html
@@ -16,101 +16,22 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 
     <meta charset="utf-8">
-    <title>나를 소개해요</title>
+    <title>조지영의 IT서비스 소개</title>
 </head>
 
 <body>
+    <h1>
+        The World Of George
+    </h1>
+    <h2>George의 IT 서비스 소개</h2>
+    <h3>나의 아이디어는 총 2개야
+        <br>
+        하나하나 클릭해보자 고고
+    </h3>
     <div class="container">
         <br>
         <ul class="nav nav-tabs">
-            <li role="presentation" class="active"><a href="1.html">유년기</a></li>
-            <li role="presentation"><a href="2.html">질풍노도의 시기</a></li>
-            <li role="presentation"><a href="3.html">방황기</a></li>
-            <li role="presentation"><a href="4.html">지금</a></li>
+            <li role="presentation" class="active"><a href="1.html">계정관리</a></li>
+            <li role="presentation"><a href="2.html">빠른 버스</a></li>
+            <li role="presentation"><a href="3.html">7기 시작을 알리는 각오 한마디</a></li>
         </ul>
-
-        </ul>
-        <h1>조지영을 소개합니다.</h1>
-        <h2>조지영을 소개합니다.</h2><br>
-        <form action="전송받을 대상">
-            아이디 : <input type="text" name="myid">
-            비밀번호 : <input type="password" name="mypw">
-            <div class="form-group">
-                <label for="exampleInputEmail1">이메일 주소</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" placeholder="이메일을 입력하세요">
-            </div>
-            <div class="form-group">
-                <label for="exampleInputPassword1">암호</label>
-                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="암호">
-            </div>
-            <div class="form-group">
-                <label for="exampleInputFile">파일 업로드</label>
-                <input type="file" id="exampleInputFile">
-                <p class="help-block">여기에 블록레벨 도움말 예제</p>
-            </div>
-            <div class="checkbox">
-                <label>
-                    <input type="checkbox"> 입력을 기억합니다
-                </label>
-            </div>
-            <input type="submit" class="btn btn-primary">
-
-        </form><br>
-
-
-
-
-
-
-        </form>
-        <br>
-        <img src="snowman.jpg" width=300>
-        <br>
-        <form action="전송받을 대상">
-            <h2>나의 일기장</h2>
-            제목 : <input type="text" name="diarytitle"><br>
-            <select>
-                <option value="goodday">좋은날</option>
-                <option value="sadday">슬픈날</option>
-                <option value="soso">그저그런날</option>
-            </select> <br>
-
-            내용 : <br>
-            <textarea cols="30" rows="20"></textarea>
-            <br><input type="submit">
-        </form><br>
-        <div class="progress">
-            <div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar" aria-valuenow="40"
-                aria-valuemin="0" aria-valuemax="100" style="width: 40%">
-                <span class="sr-only">40% Complete (success)</span>
-            </div>
-        </div>
-        <div class="progress">
-            <div class="progress-bar progress-bar-info progress-bar-striped" role="progressbar" aria-valuenow="20"
-                aria-valuemin="0" aria-valuemax="100" style="width: 20%">
-                <span class="sr-only">20% Complete</span>
-            </div>
-        </div>
-        <div class="progress">
-            <div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar" aria-valuenow="60"
-                aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-                <span class="sr-only">60% Complete (warning)</span>
-            </div>
-        </div>
-        <div class="progress">
-            <div class="progress-bar progress-bar-danger progress-bar-striped" role="progressbar" aria-valuenow="80"
-                aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-                <span class="sr-only">80% Complete (danger)</span>
-            </div>
-        </div>
-        <h2>나의 일대기</h2>
-        <ol>
-            <li><a href="1.html">유년기</a></li>
-            <li><a href="2.html">질풍노도의 시기</a></li>
-            <li><a href="3.html">방황기</a></li>
-            <li><a href="4.html">지금</a></li>
-        </ol>
-    </div>
-</body>
-
-</html>
